--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,14 +1,11 @@
 name: PAC & Github actions CD demo
 run-name: ${{ github.actor }} is running cd workflow 
 on:
-  pull_request:
-    types:
-      - closed
+  push:
     branches:
       - master
 jobs:
-  if_merged:
-    if: github.event.pull_request.merged == true
+  deploy:
     defaults:
       run:
         working-directory: .\Solutions
