--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -42,5 +42,4 @@ jobs:
         environment-url: ${{ secrets.URL }}
         user-name:  ${{ secrets.USERNAME }}
         password-secret: ${{ secrets.PASSWORD }}
-        solution-file: '.\bin\Debug\Solutions.zip'
-  
+        solution-file: 'bin\Debug\Solutions.zip'
