--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -24,10 +24,9 @@ jobs:
         node -v
         npm ci
         npm run build --if-present
-    #- name: setup msbuild
-    #  uses: microsoft/setup-msbuild@v1.1
-    #- name: msbuild
-    #  run: msbuild
+        cd Solutions
+    - name: check path before dot build
+      run: echo $pwd
     - name: Setup .NET Core SDK
       uses: actions/setup-dotnet@v2
       with:
@@ -36,6 +35,10 @@ jobs:
       run: dotnet restore
     - name: dotnet build
       run: dotnet build
+    - name: check path before publish
+      run: |
+        echo $pwd
+        ls
     - name: publish
       uses: microsoft/powerplatform-actions/import-solution@v0
       with:
