--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -19,14 +19,14 @@ jobs:
         node-version: '18.7.x'
     - name: npm install
       run: |
-        cd ..\
         echo $pwd
         node -v
         npm ci
         npm run build --if-present
-        cd Solutions
     - name: check path before dot build
-      run: echo $pwd
+      run: |
+        echo $pwd
+        tree /F
     - name: Setup .NET Core SDK
       uses: actions/setup-dotnet@v2
       with:
@@ -38,7 +38,7 @@ jobs:
     - name: check path before publish
       run: |
         echo $pwd
-        ls
+        tree /F
     - name: publish
       uses: microsoft/powerplatform-actions/import-solution@v0
       with:
