--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -23,10 +23,6 @@ jobs:
         node -v
         npm ci
         npm run build --if-present
-    - name: check path before dot build
-      run: |
-        echo $pwd
-        tree /F
     - name: Setup .NET Core SDK
       uses: actions/setup-dotnet@v2
       with:
@@ -36,13 +32,17 @@ jobs:
     - name: dotnet build
       run: dotnet build
     - name: check path before publish
-      run: |
-        echo $pwd
-        tree /F
-    - name: publish
+      run: tree /F
+    - name: Import solution
       uses: microsoft/powerplatform-actions/import-solution@v0
       with:
         environment-url: ${{ secrets.URL }}
         user-name:  ${{ secrets.USERNAME }}
         password-secret: ${{ secrets.PASSWORD }}
         solution-file: 'Solutions\bin\Debug\Solutions.zip'
+    - name: Publish Solution
+      uses: microsoft/powerplatform-actions/publish-solution@v0
+      with:
+        environment-url: ${{ secrets.URL }}
+        user-name: ${{ secrets.USERNAME }}
+        password-secret: ${{ secrets.PASSWORD }}
